[project]
name = "picomap"
version = "0.1.0"
description = "Tiny utility for memory mapping datasets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "tqdm>=4.67.1",
    "xxhash>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/rdilip/picomap"
Issues = "https://github.com/rdilip/picomap/issues"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.14.3",
]
